# ecen330

./: .gitignore  CMakeLists.txt  Makefile  bclean.sh  check_and_zip.py  cmake_install.cmake  format.py  run_elf_on_board.py
.github/workflows/: ci.yml
archive/lab_simon/: fsTester.c  vsTester.c
drivers/: CMakeLists.txt  Makefile  buttons.c  cmake_install.cmake  interrupts.c  intervalTimer.c  switches.c  touchscreen.c
include/: armInterrupts.h
lab1_helloworld/: Makefile  cmake_install.cmake  lab1.elf
lab2_gpio/: Makefile  cmake_install.cmake  gpioTest.c  lab2.elf
lab3_timer/: Makefile  cmake_install.cmake  lab3_m1.elf  lab3_m2.elf
lab4_interrupts/: CMakeLists.txt  Makefile  cmake_install.cmake  interrupt_test.c  lab4.elf
lab5_touchscreen/: CMakeLists.txt  Makefile  cmake_install.cmake  lab5.elf  main.c
lab6_clock/: CMakeLists.txt  Makefile  clockControl.c  cmake_install.cmake  lab6.elf
lab7_tictactoe/: CMakeLists.txt  Makefile  cmake_install.cmake  lab7_m1.elf  lab7_m2.elf  minimax.c  minimax_old.c  minimax_provided.c  testBoards.c  ticTacToeControl.c
lab8_missilecommand/: CMakeLists.txt  Makefile  cmake_install.cmake  gameControl.c  missile.c  plane.c
lab9_project/: CMakeLists.txt  config.h  gameControl.c  gameControl.h  laser.c  laser.h  main.c
lasertag/: sound.c
tools/checker/lab7/: checker.cmake  cmake
tools/checker/lab8/: checker.cmake  cmake
